# ink-battles

./: .cnb.yml  .dockerignore  .gitignore  .template.env  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  afd.md  config.example.toml  docker-compose.build.yml  docker-compose.yml  ecosystem.config.cjs  eslint.config.mjs  eslint.config.ts  middleware.ts  money.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  skills-lock.json  tsconfig.json  turbo.json  unocss.config.ts
apps/auth/: .gitignore  Cargo.toml  Dockerfile  README.md  package.json
apps/auth/panel/: .env.example  .gitignore  README.md  eslint.config.mjs  metadata.json  next.config.ts  package.json
apps/auth/panel/app/: globals.css  layout.tsx  page.tsx
apps/auth/panel/app/authorize/: page.tsx
apps/auth/panel/app/dashboard/: page.tsx
apps/auth/panel/app/forgot-password/: page.tsx
apps/auth/panel/app/oauth/complete/: page.tsx
apps/auth/panel/app/register/: page.tsx
apps/auth/panel/app/reset-password/: page.tsx
apps/auth/panel/app/sessions/: page.tsx
apps/auth/panel/components/: auth-layout.tsx  password-strength.tsx  theme-provider.tsx  theme-toggle.tsx
apps/auth/panel/components/ui/: button.tsx  input.tsx  label.tsx
apps/auth/panel/hooks/: use-code-cooldown.ts  use-fcaptcha.ts  use-turnstile.ts
apps/auth/panel/lib/: auth-api.ts
apps/auth/src/: account.rs  assets.rs  config.rs  email.rs  fcaptcha.rs  mail.rs  main.rs  models.rs  password_crypto.rs  response.rs  session.rs  state.rs  turnstile.rs  utils.rs
apps/auth/src/oauth/: accounts.rs  flow.rs  mod.rs  pending.rs  providers.rs  types.rs
scripts/py/: analyze_pricing.py  api_data.json  fetch_api_data.py  pyproject.toml
(+702 files in other folders)
