[package]
name = "ink-auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
base64 = "0.22.1"
bcrypt = "0.19.2"
chrono = { version = "0.4.45", features = [ "serde" ] }
cookie = "0.18.1"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
lettre = { version = "0.11.22", default-features = false, features = [
  "builder",
  "smtp-transport",
  "tokio1-native-tls"
] }
mongodb = "3.7.0"
rand = "0.10.2"
regex = "1.12.4"
reqwest = { version = "0.12.25", default-features = false, features = [
  "json",
  "rustls-tls"
] }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tokio = { version = "1.52.3", features = [
  "macros",
  "rt-multi-thread",
  "signal"
] }
toml = "0.9.10"
tower-http = { version = "0.7.0", features = [
  "cors",
  "trace"
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }
uuid = { version = "1.23.4", features = [
  "v4",
  "serde"
] }
