[project]
name = "fetch-api-data"
version = "0.1.0"
description = "Script to fetch API data with pagination"
authors = [ { name = "tianxiang", email = "tianxiang@example.com" } ]
dependencies = [
  "matplotlib>=3.7.5",
  "numpy>=1.24.4",
  "pandas>=2.0.3",
  "requests>=2.31.0",
  "scipy>=1.10.1",
  "seaborn>=0.13.2",
]
requires-python = ">=3.8"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [ "pytest>=7.0", ]

[tool.uv.workspace]
members = [ "py", ]
